--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -49,15 +49,14 @@
             <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="index.html#illustration">Illustration</a>
-              <a class="dropdown-item nav-item" href="index.html#magazines">Magazine Design</a>
-              <a class="dropdown-item nav-item" href="index.html#branding">Branding</a>
-              <a class="dropdown-item nav-item" href="index.html#mographs">Motion Graphics</a>
-              <a class="dropdown-item nav-item" href="index.html#web">Web</a>
+              <a class="dropdown-item nav-item" href="index.html#csp">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="index.html#canopy">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="index.html#cmg">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="index.html#halfhalt">Half Halt Illustrations</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="https://www.instagram.com/han.the.human/?hl=en" target=_blank>Photography</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:hannahhatherell@gmail.com" target="_blank">Connect</a>
@@ -114,13 +113,13 @@
           <div class="img-fluid"></div>
         </div>
         <div class="col-md-12 col-lg-7 col-xl-7">
-          <h3 class="text-uppercase text-primary text-left">About Hannah</h3>
-
-          <p class="text-left">I'm a creative problem-solver with 5+ years in the design industry. I enjoy crafting rich, interactive experiences for digital platforms and print media.</p>
-          <p>Most recently I was positioned at Canopy Growth as a Production Designer. My current work includes process-building, magazine layout, front-end web design, as well as UX and UI design for virtual reality.</p>
-          <p class="text-left">I'm up for anything—let's get in touch!</p>
+          <!--<h3 class="text-uppercase text-primary text-left">About Hannah</h3>-->
+          <img class="gif" src="img/1_hi.gif" alt="">
+          <p class="text-left">I’m an experienced designer who enjoys crafting interactive user-driven experiences for digital platforms. Over the last five years I've learned UX & UI design for virtual reality and web, magazine layout and front-end web design.</p>
+          <p>I currently work as a Graphic Designer at the not-for-profit organization Canadian Science Publishing (CSP). Some of my work at CSP includes project management, UX & UI design for web and managing 24 different journal brands. <a href="#csp"><strong>Check out some recent projects.</strong></a></p>
+          <p class="text-left"><a href="#halfhalt">My passion project is called Half Halt Illustrations.</a> This is a space where I showcase my illustration skills and give back to the community.</p>
           <div class="text-left">
-            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send Hannah a Message</a>
+            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com"> Let's get in touch! </a>
           </div>
         </div>
       </div>
@@ -130,8 +129,59 @@
   </section>
 
 
+  <!-- CSP Section -->
+  <section class="publications text-center pb-4 text-white" id="csp" style="background-color: #282c30;">
+    <a href="http://cdnsciencepub.com" target="_blank"><img class="c-logo-1 img-fluid project pb-4 pt-5" src="img/brands/csp.png" alt=""></a>
+    <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canadian Science Publishing</h3>-->
+    <!--<p class="text-center">_____</p>-->
+    <p class="text-center as">Growing and supporting a Canadian not-for-profit organization.</p>
+    <div id="pw" class="container">
+      <div class="row pt-4 text-center">
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="https://www.instagram.com/visualizingscience/" target="_blank">
+            <img class="img-fluid project" src="img/csp/vsc/vsc-ft.jpg" alt="">
+          </a>
+          <p class="text-center pb-3 text-uppercase">Visualizing Science Contest<br><span class="text-capitalize">Branding & Promotional Graphics</span></p>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank">
+            <img class="img-fluid project" src="img/csp-hubspot.png" alt="motion graphics archer featured project image">
+          </a>
+          <p class="text-center pb-3 text-uppercase">Journal Sales Catalogue<br><span class="text-capitalize">Landing page · Flipbook · Illustrations</span></p>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="arctic-science.html">
+            <img class="img-fluid project" src="img/csp/as/as-ft.png" alt="">
+          </a>
+          <p class="text-center pb-3"><span class="text-uppercase">Indigenous Knowledge Collection</span><br><span>Story-telling Graphics</span></p>
+        </div>
+    </div>
+  </section>
 
-  <!-- Illustration Section -->
+
+  <!-- Canopy -->
+  <section class="publications text-center pt-3 pb-5 bg-white" id="canopy">
+    <div class="container">
+      <a href="https://www.canopygrowth.com" target="_blank"><img class="c-logo-2 pb-2 img-fluid project pt-5" src="img/brands/cgc.png" alt=""></a>
+      <img class="img-fluid pb-5" src="img/brands/cgc-brands.png" alt="">
+      <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canopy Growth</h3>-->
+        <div class="row pt-3 text-center">
+        <!-- Phone & Tablet -->
+        <div class="col-md-6">
+          <img class="img-fluid w-75" src="img/spc.png" alt="">
+          <p class="text-center pb-3 text-uppercase pt-3">Iconography</p>
+        </div>
+        <div class="col-md-6 align-middle">
+          <img class="img-fluid" src="img/tweed.jpg" alt="">
+          <p class="text-center pb-3 text-uppercase pt-3">Photo retouching</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- Illustration Section
   <section class="publications text-center pb-4 text-white" id="illustration" style="background-color: #282c30;">
 
     <h3 class="text-center text-uppercase pt-5 text-primary">Illustration</h3>
@@ -159,10 +209,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
 
-  <!-- Photography Section -->
+
+  <!-- Photography Section
   <section class="publications bg-secondary text-center" id="photography">
     <a href="photography.html" class="vimeo-lg">
 <img class="img-fluid" src="img/photog/photog-banner.jpg">
@@ -172,7 +223,7 @@
 <img class="img-fluid" src="img/photog/photog-banner-phone.jpg">
 </a>
 
-  </section>
+</section>-->
 
 
   <!-- UX Section
@@ -200,12 +251,11 @@
 
 
 
-  <!-- Magazine section -->
-    <section class="pt-3 pb-5 text-white" id="magazines" style="background-color: #282c30;">
+  <!-- CMG section -->
+    <section class="pt-3 pb-5 text-white text-center" id="cmg" style="background-color: #282c30;">
       <div class="container">
-
-        <h3 class="text-center text-uppercase pt-5 text-primary ">Magazines</h3>
-        <p class="text-center">_____</p>
+        <a href="http://coylemediagroup.com" target="_blank"><img class="c-logo-3 pb-3 img-fluid project pt-5" src="img/brands/cmg.png" alt=""></a>
+        <!--<h3 class="text-center text-uppercase text-primary">Coyle Media Group</h3>-->
         <p class="text-center">End-to-end design including editorial, advertorial and advertising.</p>
 
         <div class="row pt-3 text-center cards">
@@ -239,7 +289,7 @@
               <div class="img-fluid luxe-card"></div>
             </a>
             <p class="text-center mb-0 text-uppercase text-white">Luxe Magazine Ottawa</p>
-            <p class="text-center pb-3 text-uppercase text-white" style="font-size: 14px;">Spring/Summer 2019</p>
+            <p class="text-center pb-3 text-uppercase text-white" id="halfhalt" style="font-size: 14px;">Spring/Summer 2019</p>
           </div>
         </div>
       </div>
@@ -247,30 +297,62 @@
 
 
 
-  <!-- Branding Section -->
+    <!-- Illustration Section -->
+    <section class="publications text-center pb-4">
+
+      <div class="container">
+
+        <div class="row pt-3 text-center">
+          <!-- Phone & Tablet -->
+          <div class="col-md-6">
+            <a class="d-block mx-auto mb-2" href="http://hhillustrations.weebly.com" target="_blank">
+                <img class="img-fluid project" src="img/hh.jpg" alt="">
+              </a>
+          </div>
+          <div class="col-md-6 align-middle hh">
+            <a href="http://hhillustrations.weebly.com" target="_blank"><img class="img-fluid project" src="img/hh.svg" alt=""></a>
+            <h3 class="text-center text-uppercase text-primary pt-1">My passion project</h3>
+
+            <p class="text-center">Started in March of 2020 when the pandemic first hit.</p>
+
+              <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://hhillustrations.weebly.com/about.html" target="_blank"> Read my story </a>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+
+  <!-- Branding Section
   <section class="publications bg-secondary text-center pb-5" id="branding">
 
-    <h3 class="text-center text-uppercase pt-5 text-primary">Branding</h3>
+    <h3 class="text-center text-uppercase pt-5 text-primary">Brands I've worked with</h3>
     <p class="text-center">_____</p>
-    <p class="text-center">Logo design.</p>
     <div id="pw" class="container pb-5">
       <div class="row pt-4 text-center">
         <div class="col-md-4 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="img/projects/branding/jaski.png" alt="">
+          <img class="img-fluid" src="img/brands/csp.png" alt="">
+          <div class="col-md-4 col-lg-4 col-xl-4">
+            <img class="img-fluid" src="img/brands/csp.png" alt="">
+          </div>
         </div>
         <div class="col-md-4 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="img/projects/branding/hhi.png" alt="">
+          <img class="img-fluid" src="img/brands/cgc.png" alt="">
+          <img class="img-fluid" src="img/brands/cgc-logos.png" alt="">
         </div>
         <div class="col-md-4 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="img/projects/branding/rhh.png" alt="">
+          <img class="img-fluid" src="img/brands/cmg.png" alt="">
+          <img class="img-fluid" src="img/brands/cmg-logos.png" alt="">
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
-  <!-- Motion Graphics Section -->
+  <!-- Motion Graphics Section
   <section class="publications text-center text-white pb-5" id="mographs" style="background-color: #282c30;">
 
     <h3 class="text-center text-uppercase pt-5 text-primary">Motion Graphics</h3>
@@ -289,7 +371,7 @@
       </section>
     </div>
 
-  </section>
+  </section> -->
 
 
   <!-- Web Section
@@ -309,7 +391,9 @@
   </section>-->
 
 
-  <!-- Web Section 3 -->
+
+
+  <!-- Web Section 3
   <section class="publications text-center pt-3 pb-5 bg-secondary" id="web">
 
     <h3 class="text-center text-uppercase pt-5 text-primary">Web</h3>
@@ -337,7 +421,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
@@ -388,11 +472,11 @@
                   <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
-            <li class="list-inline-item">
+            <!--<li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
                 <i class="fab fa-instagram"></i>
                 </a>
-            </li>
+            </li>-->
             <li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
                   <i class="fas fa-envelope"></i>
@@ -423,14 +507,26 @@
           <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
           <ul class="list-inline mb-3">
             <li class="list-inline-item d-block">
-              <a href="graphic-design.html">Charley Harper Red Panda</a>
+              <a href="#illustration">Canadian Science Publishing</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="perrault.html">Plusieurs Pièces de Perrault</a>
+              <a href="#web">Canopy Growth</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="illustration.html">Marvel & DC Characters</a>
+              <a href="#magazines">Coyle Media Group</a>
             </li>
+            <li class="list-inline-item d-block">
+              <a href="http://hhillustrations.weebly.com" target="_blank">Half Halt Illustrations</a>
+            </li><!--
+              <li class="list-inline-item d-block">
+                <a href="graphic-design.html">Charley Harper Red Panda</a>
+              </li>
+              <li class="list-inline-item d-block">
+                <a href="perrault.html">Plusieurs Pièces de Perrault</a>
+              </li>
+              <li class="list-inline-item d-block">
+                <a href="illustration.html">Marvel & DC Characters</a>
+              </li><!--
             <li class="list-inline-item d-block">
               <a href="index.html#magazines">Luxe Ottawa Magazine</a>
             </li>
@@ -448,7 +544,7 @@
             </li>
             <li class="list-inline-item d-block">
               <a href="https://blueocean.net" target="_blank">Blue Ocean Website</a>
-            </li>
+            </li>-->
           </ul>
         </div>
 
@@ -456,7 +552,7 @@
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
+    <small class="font-weight-light">©2021 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
     <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
