--- a/perrault.html
+++ b/perrault.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="https://www.instagram.com/han.the.human/?hl=en" target=_blank>Photography</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:hannahhatherell@gmail.com" target="_blank">Connect</a>
