--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <div class="col-md-12 col-lg-7 col-xl-7">
           <!--<h3 class="text-uppercase text-primary text-left">About Hannah</h3>-->
           <img class="gif" src="img/1_hi.gif" alt="">
-          <p class="text-left">I’m an experienced designer who enjoys crafting interactive user-driven experiences for digital platforms. Over the last five years I've learned UX & UI design for virtual reality and web, magazine layout and front-end web design.</p>
-          <p>I currently work as a Graphic Designer at the not-for-profit organization Canadian Science Publishing (CSP). Some of my work at CSP includes project management, UX & UI design for web and managing 24 different journal brands. <a href="#csp"><strong>Check out some recent projects.</strong></a></p>
+          <p class="text-left">I’m an experienced multimedia designer. In the last five years, I've been honing my skills in UX and responsive web design as well as graphic and layout design for web and print. Most recently, I'm teaching myself how to design for 3D.</p>
+          <p>I currently work as the Graphic Designer for the Marketing team at a not-for-profit organization called Canadian Science Publishing (CSP). Some of my work at CSP includes managing 24 different journal brands, spearheading all visual components of our promotional campaigns and implementing tools and design to improve user experience. <a href="#csp"><strong>Check out some recent projects.</strong></a></p>
           <p class="text-left"><a href="#halfhalt">My passion project is called Half Halt Illustrations.</a> This is a space where I showcase my illustration skills and give back to the community.</p>
           <div class="text-left">
             <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com"> Let's get in touch! </a>
