--- a/arctic-science.html
+++ b/arctic-science.html
@@ -76,9 +76,11 @@
 
 
           <div class="img fluid text-center">
-            <a href="https://medium.com/arctic-science/the-knowledge-co-production-and-co-management-of-arctic-wildlife-special-issue-published-in-the-f6bda85c3027" target="_blank"><img class="as img-fluid project pb-3 pt-5" src="img/csp/as/as-1.jpg" alt=""></a>
+            <img class="as img-fluid pb-3 pt-5" src="img/csp/as/as-cover.jpeg" alt="">
+            <p class="text-left as-text pt-3">This project involved working with the indigenous scientific community to promote a special collection of papers regarding the co-production and co-management of Arctic wildlife. A quote was pulled from each article in the collection and combined with an image from the article authors. This collection was promoted on Canadian Science Publishing's corporate website, Medium and <em>Arctic Science's</em> social media.</p>
+            <p class="text-left as-text pt-3"><a style="font-weight: 400;" href="https://medium.com/arctic-science/the-knowledge-co-production-and-co-management-of-arctic-wildlife-special-issue-published-in-the-f6bda85c3027" target="_blank">You can read more about the collection here.</a></p>
 
-            <div class="row pt-3 text-center pb-5">
+            <div class="row pt-5 text-center pb-5">
             <!-- Phone & Tablet -->
             <div class="col-md-6 as-2 pb-3">
               <img class="img-fluid" src="img/csp/as/as-2.jpg" alt="">
