--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
     <a href="http://cdnsciencepub.com" target="_blank"><img class="c-logo-1 img-fluid project pb-4 pt-5" src="img/brands/csp.png" alt=""></a>
     <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canadian Science Publishing</h3>-->
     <!--<p class="text-center">_____</p>-->
-    <p class="text-center as">Growing and supporting a Canadian not-for-profit organization.</p>
+    <p class="text-center as">Growing and supporting a Canadian not-for-profit scholarly publisher as the marketing team's Graphic Designer.</p>
     <div id="pw" class="container">
       <div class="row pt-4 text-center">
         <div class="col-md-4 col-lg-4 col-xl-4">
           <a class="d-block mx-auto mb-2" href="https://www.instagram.com/visualizingscience/" target="_blank">
             <img class="img-fluid project" src="img/csp/vsc/vsc-ft.jpg" alt="">
           </a>
-          <p class="text-center pb-3 text-uppercase">Visualizing Science Contest<br><span class="text-capitalize">Branding & Promotional Graphics</span></p>
+          <p class="text-center pb-3"><span class="text-uppercase">Visualizing Science Contest</span><br>Re-branding & Campaign Graphics</p>
         </div>
         <div class="col-md-4 col-lg-4 col-xl-4">
           <a class="d-block mx-auto mb-2" href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank">
