--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="col-md-6 align-middle">
           <img class="img-fluid" src="img/tweed.jpg" alt="">
-          <p class="text-center pb-3 text-uppercase pt-3">Photo retouching</p>
+          <p class="text-center pb-3 text-uppercase pt-3">Photography & Retouching</p>
         </div>
       </div>
 
