--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
               <a href="index.html#about">About</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="index.html#illustration">Projects</a>
+              <a href="index.html#csp">Projects</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="index.html#connect">Connect</a>
+              <a href="mailto:hannahhatherell@gmail.com">Connect</a>
             </li>
           </ul>
         </div>
@@ -507,13 +507,13 @@
           <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
           <ul class="list-inline mb-3">
             <li class="list-inline-item d-block">
-              <a href="#illustration">Canadian Science Publishing</a>
+              <a href="#csp">Canadian Science Publishing</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="#web">Canopy Growth</a>
+              <a href="#canopy">Canopy Growth</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="#magazines">Coyle Media Group</a>
+              <a href="#cmg">Coyle Media Group</a>
             </li>
             <li class="list-inline-item d-block">
               <a href="http://hhillustrations.weebly.com" target="_blank">Half Halt Illustrations</a>
