--- a/arctic-science.html
+++ b/arctic-science.html
@@ -296,10 +296,10 @@
               <a href="index.html#about">About</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="index.html#illustration">Projects</a>
+              <a href="index.html#csp">Projects</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="index.html#connect">Connect</a>
+              <a href="mailto:hannahhatherell@gmail.com">Connect</a>
             </li>
           </ul>
         </div>
@@ -308,13 +308,13 @@
           <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
           <ul class="list-inline mb-3">
             <li class="list-inline-item d-block">
-              <a href="#illustration">Canadian Science Publishing</a>
+              <a href="index.html#csp">Canadian Science Publishing</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="#web">Canopy Growth</a>
+              <a href="index.html#canopy">Canopy Growth</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="#magazines">Coyle Media Group</a>
+              <a href="index.html#cmg">Coyle Media Group</a>
             </li>
             <li class="list-inline-item d-block">
               <a href="http://hhillustrations.weebly.com" target="_blank">Half Halt Illustrations</a>
