--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       <a href="https://www.canopygrowth.com" target="_blank"><img class="c-logo-2 pb-2 img-fluid project pt-5" src="img/brands/cgc.png" alt=""></a>
       <img class="img-fluid pb-5" src="img/brands/cgc-brands.png" alt="">
       <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canopy Growth</h3>-->
+        <p class="text-center pb-5 as-text">Production and design work across multiple brands including both medical and recreational. Produced high quality product photography and photo retouching.</p>
         <div class="row pt-3 text-center">
         <!-- Phone & Tablet -->
         <div class="col-md-6">
