new website launch 2022
all initial changes launch

--- a/index.html
+++ b/index.html
@@ -35,31 +35,36 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a href="index.html"><img src="img/logo.svg"></a>
-      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="#masthead">Hannah Hatherell</a>
+      <!--<a href="index.html"><img src="img/logo.svg"></a>-->
+      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html">Home</a>
           </li>
           <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="index.html#csp">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="index.html#canopy">Canopy Growth</a>
-              <a class="dropdown-item nav-item" href="index.html#cmg">Coyle Media Group</a>
-              <a class="dropdown-item nav-item" href="index.html#halfhalt">Half Halt Illustrations</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
+            </div>
+          </div>
+          <div class="dropdown show">
+            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
+
+            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
+              <a class="dropdown-item nav-item" href="code.html">Code</a>
+              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="https://www.instagram.com/han.the.human/?hl=en" target=_blank>Photography</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:hannahhatherell@gmail.com" target="_blank">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
           </li>
         </ul>
       </div>
@@ -97,7 +102,7 @@
 </section>-->
 
   <!-- About Section -->
-  <section class="pb-5 bg-secondary" id="about">
+  <section class="pb-5" id="about">
 
 
     <!-- About Img Phone & Tablet -->
@@ -105,7 +110,17 @@
       <img class="pt-2 mx-auto img-fluid rounded-circle" src="img/han-01.jpg" alt="about section image of hannah hatherell">
     </div>
 
-    <!-- About Img Desktop -->
+    <!-- About Img Desktop new -->
+
+    <div class="container">
+      <div class="row center pt-4">
+          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
+          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for platforms. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- About Img Desktop old
 
     <div class="container">
       <div class="row pt-4">
@@ -113,27 +128,54 @@
           <div class="img-fluid"></div>
         </div>
         <div class="col-md-12 col-lg-7 col-xl-7">
-          <!--<h3 class="text-uppercase text-primary text-left">About Hannah</h3>-->
-          <img class="gif" src="img/1_hi.gif" alt="">
-          <p class="text-left">I’m an experienced multimedia designer. In the last five years, I've been honing my skills in UX and responsive web design as well as graphic and layout design for web and print. Most recently, I'm teaching myself how to design for 3D.</p>
-          <p>I currently work as the Graphic Designer for the Marketing team at a not-for-profit organization called Canadian Science Publishing (CSP). Some of my work at CSP includes managing 24 different journal brands, spearheading all visual components of our promotional campaigns and implementing tools and design to improve user experience. <a href="#csp"><strong>Check out some recent projects.</strong></a></p>
-          <p class="text-left"><a href="#halfhalt">My passion project is called Half Halt Illustrations.</a> This is a space where I showcase my illustration skills and give back to the community.</p>
-          <div class="text-left">
-            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com"> Let's get in touch! </a>
-          </div>
+
+
+          <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, & <span class="intro-3 font-weight-bold">code</span>.</h1>
+          <p>I'm a visual designer based in Ottawa, Canada with experience delivering highly attractive and engaging visual experiences for platforms. I'm passionate about improving the lives of others through design and am constantly looking to learn new things everyday.</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
   </section>
 
 
-  <!-- CSP Section -->
+  <!-- RECENT WORK -->
+
+  <section class="recent-work pb-4" id="recent-work">
+
+      <div class="container">
+        <div class="row pt-4 center">
+
+
+          <p>MY RECENT WORK</p>
+
+          <div class="">
+            <a class="d-block mx-auto mb-4" href="csp.html">
+              <img class="img-fluid project" src="img/csp.jpg">
+            </a>
+          </div>
+          <div class="">
+            <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
+              <img class="img-fluid project" src="img/mpvr.jpg">
+            </a>
+          </div>
+          <div class="">
+            <a class="d-block mx-auto mb-4" href="visual-projects.html">
+              <img class="img-fluid project" src="img/vis.jpg">
+            </a>
+          </div>
+        </section>
+
+
+
+
+
+  <!-- CSP Section
   <section class="publications text-center pb-4 text-white" id="csp" style="background-color: #282c30;">
     <a href="http://cdnsciencepub.com" target="_blank"><img class="c-logo-1 img-fluid project pb-4 pt-5" src="img/brands/csp.png" alt=""></a>
-    <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canadian Science Publishing</h3>-->
-    <!--<p class="text-center">_____</p>-->
+    <h3 class="text-center text-uppercase pt-5 text-primary">Canadian Science Publishing</h3>-->
+    <!--<p class="text-center">_____</p>
     <p class="text-center as">Growing and supporting a Canadian not-for-profit scholarly publisher as the marketing team's Graphic Designer.</p>
     <div id="pw" class="container">
       <div class="row pt-4 text-center">
@@ -156,18 +198,18 @@
           <p class="text-center pb-3"><span class="text-uppercase">Indigenous Knowledge Collection</span><br><span>Story-telling Graphics</span></p>
         </div>
     </div>
-  </section>
+  </section> -->
 
 
-  <!-- Canopy -->
+  <!-- Canopy
   <section class="publications text-center pt-3 pb-5 bg-white" id="canopy">
     <div class="container">
       <a href="https://www.canopygrowth.com" target="_blank"><img class="c-logo-2 pb-2 img-fluid project pt-5" src="img/brands/cgc.png" alt=""></a>
       <img class="img-fluid pb-5" src="img/brands/cgc-brands.png" alt="">
-      <!--<h3 class="text-center text-uppercase pt-5 text-primary">Canopy Growth</h3>-->
+      <h3 class="text-center text-uppercase pt-5 text-primary">Canopy Growth</h3>
         <p class="text-center pb-5 as-text">Production and design work across multiple brands including both medical and recreational. Produced high quality product photography and photo retouching.</p>
         <div class="row pt-3 text-center">
-        <!-- Phone & Tablet -->
+        Phone & Tablet
         <div class="col-md-6">
           <img class="img-fluid w-75" src="img/spc.png" alt="">
           <p class="text-center pb-3 text-uppercase pt-3">Iconography</p>
@@ -179,7 +221,7 @@
       </div>
 
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Illustration Section
@@ -252,15 +294,15 @@
 
 
 
-  <!-- CMG section -->
+  <!-- CMG section
     <section class="pt-3 pb-5 text-white text-center" id="cmg" style="background-color: #282c30;">
       <div class="container">
         <a href="http://coylemediagroup.com" target="_blank"><img class="c-logo-3 pb-3 img-fluid project pt-5" src="img/brands/cmg.png" alt=""></a>
-        <!--<h3 class="text-center text-uppercase text-primary">Coyle Media Group</h3>-->
+        <h3 class="text-center text-uppercase text-primary">Coyle Media Group</h3>
         <p class="text-center">End-to-end design including editorial, advertorial and advertising.</p>
 
         <div class="row pt-3 text-center cards">
-          <!-- Phone & Tablet -->
+           Phone & Tablet
           <div class="col-md-6">
             <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
                 <img class="img-fluid project" src="img/projects/luxe/luxe-spread-2.png" alt="">
@@ -273,10 +315,10 @@
               </a>
             <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
           </div>
-        </div>
+        </div> -->
 
 
-        <!-- Desktop 2 -->
+        <!-- Desktop 2
         <div class="row pt-3 mx-auto">
           <div class="col-lg-6 cards-desktop mx-auto">
             <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
@@ -294,35 +336,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-
-
-    <!-- Illustration Section -->
-    <section class="publications text-center pb-4">
-
-      <div class="container">
-
-        <div class="row pt-3 text-center">
-          <!-- Phone & Tablet -->
-          <div class="col-md-6">
-            <a class="d-block mx-auto mb-2" href="http://hhillustrations.weebly.com" target="_blank">
-                <img class="img-fluid project" src="img/hh.jpg" alt="">
-              </a>
-          </div>
-          <div class="col-md-6 align-middle hh">
-            <a href="http://hhillustrations.weebly.com" target="_blank"><img class="img-fluid project" src="img/hh.svg" alt=""></a>
-            <h3 class="text-center text-uppercase text-primary pt-1">My passion project</h3>
-
-            <p class="text-center">Started in March of 2020 when the pandemic first hit.</p>
-
-              <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://hhillustrations.weebly.com/about.html" target="_blank"> Read my story </a>
-
-          </div>
-        </div>
-
-      </div>
-    </section>
 
 
 
@@ -457,7 +472,7 @@
   </section> -->
 
 
-  <!-- Footer -->
+  <!-- Footer old
   <footer id="connect" class="footer text-center pb-3" id="footer">
     <div class="container">
       <div class="row">
@@ -473,11 +488,11 @@
                   <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
-            <!--<li class="list-inline-item">
+            <li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
                 <i class="fab fa-instagram"></i>
                 </a>
-            </li>-->
+            </li>
             <li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
                   <i class="fas fa-envelope"></i>
@@ -518,43 +533,34 @@
             </li>
             <li class="list-inline-item d-block">
               <a href="http://hhillustrations.weebly.com" target="_blank">Half Halt Illustrations</a>
-            </li><!--
-              <li class="list-inline-item d-block">
-                <a href="graphic-design.html">Charley Harper Red Panda</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="perrault.html">Plusieurs Pièces de Perrault</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="illustration.html">Marvel & DC Characters</a>
-              </li><!--
-            <li class="list-inline-item d-block">
-              <a href="index.html#magazines">Luxe Ottawa Magazine</a>
             </li>
-            <li class="list-inline-item d-block">
-              <a href="index.html#branding">Branding Logo Design</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="index.html#mographs">Motion Graphics</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="https://luxemagazineottawa.com" target="_blank">Luxe Ottawa Website</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="https://snowbirdhaven.ca" target="_blank">Snowbird Haven Website</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="https://blueocean.net" target="_blank">Blue Ocean Website</a>
-            </li>-->
           </ul>
         </div>
 
       </div>
+  </footer>-->
+
+
+  <footer id="connect" class="footer center text-center pb-3" id="footer">
+    <div class="container">
+      <h5 class="font-weight-bold mb-3">Let's connect</h5>
+        <p>Get in touch for opportunities or just to say hi! 👋</p>
+          <ul class="list-inline mb-3">
+            <li class="list-inline-item">
+              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                  <i class="fas fa-envelope"></i>
+                </a>
+            </li>
+          </ul>
   </footer>
 
   <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small class="font-weight-light">©2021 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
-    <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
   </div>
   </div>
 
