--- a/graphic-design.html
+++ b/graphic-design.html
@@ -10,14 +10,14 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Illustration · Red Panda</title>
+  <title>Hannah Hatherell</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -35,56 +35,90 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a href="index.html"><img src="img/logo.svg"></a>
-      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
+      <!--<a href="index.html"><img src="img/logo.svg"></a>-->
+      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html">Home</a>
           </li>
           <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="index.html#illustration">Illustration</a>
-              <a class="dropdown-item nav-item" href="index.html#magazines">Magazine Design</a>
-              <a class="dropdown-item nav-item" href="index.html#branding">Branding</a>
-              <a class="dropdown-item nav-item" href="index.html#mographs">Motion Graphics</a>
-              <a class="dropdown-item nav-item" href="index.html#web">Web</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
+            </div>
+          </div>
+          <div class="dropdown show">
+            <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</a>
+
+            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item nav-item" href="graphic-design.html">Design</a>
+              <a class="dropdown-item nav-item" href="code.html">Code</a>
+              <a class="dropdown-item nav-item" href="illustration.html">Ride</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="https://www.instagram.com/han.the.human/?hl=en" target=_blank>Photography</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:hannahhatherell@gmail.com" target="_blank">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Banner -->
-  <section class="banner-harper bg-primary text-center">
-    <!--<div class="col-sm-8 col-md-8 col-lg-6 ml-auto mr-auto pb-3">
-      <h1 class="banner-h1">Charley Harper</h1>
-      <p class="lead">Graphic Design</p>
-    </div>-->
+  <section class="pb-5 " id="about">
+
+    <div class="container">
+      <div class="row pt-4 center">
+          <h1 class="text-left font-weight-bold">I <span class="intro-1-solid font-weight-bold">design</span> and sometimes draw.</h1>
+        </div>
+      </div>
+    </div>
+
   </section>
 
+  <section class="banner-octo text-center"></section>
+
+
+  <div class="text-center pt-5">
+    <h1 class="pb-0 mb-0">Blue Ringed Octopus Illustration</h1>
+    <p class="text-uppercase mb-0" style="font-size: 14px;">Inspired by my fascination of underwater creatures</p>
+    <p class="text-center">_____</p>
+  </div>
+
+  <section class="mx-auto pb-5 mb-5">
+
+    <div class="col-lg-8 mx-auto pt-4">
+      <video muted class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+            <source src="img/octo.mp4" type="video/mp4">
+          </video>
+      <video muted class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+            <source src="img/octo.mp4" type="video/mp4">
+          </video>
+      <video muted class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+            <source src="img/octo.mp4" type="video/mp4">
+          </video>
+    </section>
+
+
+  <!-- Banner -->
+  <section class="banner-harper text-center"></section>
+
   <div class="text-center pt-4">
-    <h1 class="pb-0 mb-0">Illustration</h1>
-    <p class="text-uppercase mb-0" style="font-size: 14px;">Red Panda</p>
+    <h1 class="pb-0 mb-0">Red Panda</h1>
+    <p class="text-uppercase mb-0" style="font-size: 14px;">Inspired by Charley Harper</p>
     <p class="text-center">_____</p>
   </div>
 </div>
 
-    <section class="w-75 mx-auto">
-      <div class="col-lg-8 ml-auto mr-auto pt-4">
-        <p>This project was inspired by Charley Harper's work and focuses on the basic gestalt principles of proximity, continuation, closure, as well as negative and positive space.</p>
+    <section class="w-75 mx-auto pb-5">
+      <div class="col-lg-8 ml-auto mr-auto pt-4 pb-5">
+        <!--<p>This project was inspired by Charley Harper's work and focuses on the basic gestalt principles of proximity, continuation, closure, as well as negative and positive space.</p>-->
 
 
           <div class="pb-5 mx-auto text-center d-block">
@@ -99,44 +133,67 @@
             <img class="img-fluid" src="img/projects/harper/harper.jpg" class="img-fluid d-block" alt="">
           </div>
 
-        <p class="text-center">The final result.</p>
-
-
-        <!--<div class="d-block mx-auto pb-5 pt-2 text-center">
-          <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ps.svg" alt="adobe photoshop logo">
-          <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ai.svg" alt="adobe illustrator logo">
-        </div>-->
-
-        <!--<div class="text-center pb-5">
-          <a class="btn btn-primary btn-md rounded-pill mb-1" href="index.html#pw">Return to Past Work</a>
-        </div>-->
 
       </div>
     </section>
 
+    <section class="banner-marvel bg-primary text-center pt-5">
+    </section>
 
+
+    <div class="text-center pt-5">
+      <h1 class="pb-0 mb-0">Marvel & DC Characters</h1>
+      <p class="text-uppercase mb-0" style="font-size: 14px;">Inspired by my love of Marvel</p>
+      <p class="text-center">_____</p>
+    </div>
+
+      <section>
+        <div class="col-lg-8 ml-auto mr-auto pt-4 pb-5">
+          <div class="row pt-1 pb-5 pl-5 pr-5 mx-auto">
+            <div class="pr-0 pl-0">
+              <img src="img/projects/commissions/loki-sbs.jpg" class="img-fluid" alt="">
+              <img src="img/projects/commissions/strange-sbs.jpg" class="img-fluid" alt="">
+              <img src="img/projects/commissions/ww-sbs.jpg" class="img-fluid" alt="">
+              <img src="img/projects/commissions/dp-sbs.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+        <div class="bb mb-5 pt-5"></div>
+
+
+        <!-- More -->
+
+
+      <section class="pb-5">
+        <div class="container center">
+        <p class="font-weight-bold text-center">More about me</p>
+          <div class="row pt-4 pb-2">
+            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+            <a href="code.html"><img class="img-fluid project" src="img/code.jpg"></a>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+              <a href="illustration.html"><img class="img-fluid project" src="img/ride.jpg"></a>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
     <!-- Footer -->
-    <footer class="footer text-center" id="footer">
+    <footer id="connect" class="footer center text-center pb-3" id="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Location</h5>
-            <p class="mb-3">Ottawa, ON</p>
-          </div>
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Connect</h5>
+        <h5 class="font-weight-bold mb-3">Let's connect</h5>
+          <p>Get in touch for opportunities or just to say hi! 👋</p>
             <ul class="list-inline mb-3">
               <li class="list-inline-item">
                 <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
-                  </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
-                  <i class="fab fa-instagram"></i>
                   </a>
               </li>
               <li class="list-inline-item">
@@ -145,70 +202,11 @@
                   </a>
               </li>
             </ul>
-          </div>
-
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Navigate</h5>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item d-block">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#about">About</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#portfolio">Projects</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="photography.html">Photography</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#connect">Connect</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item d-block">
-                <a href="graphic-design.html">Charley Harper Red Panda</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="perrault.html">Plusieurs Pièces de Perrault</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="illustration.html">Marvel & DC Characters</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#magazines">Luxe Ottawa Magazine</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#branding">Branding Logo Design</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#mographs">Motion Graphics</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="https://luxemagazineottawa.com" target="_blank">Luxe Ottawa Website</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="https://snowbirdhaven.ca" target="_blank">Snowbird Haven Website</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="https://blueocean.net" target="_blank">Blue Ocean Website</a>
-              </li>
-            </ul>
-          </div>
-
-        </div>
     </footer>
 
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
-        <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-      </div>
+    <div class="copyright py-4 text-center" <div class="container pt-1">
+      <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+    </div>
     </div>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
