--- a/luxe.html
+++ b/luxe.html
@@ -10,14 +10,14 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Luxe Spring 2019</title>
+  <title>Hannah Hatherell</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -35,180 +35,130 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a href="index.html"><img src="img/logo.svg"></a>
-      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
+      <!--<a href="index.html"><img src="img/logo.svg"></a>-->
+      <a class="navbar-brand js-scroll-trigger pl-3 font-weight-bold" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-
-          <i class="fa fa-bars"></i>
-        </button>
+        <i class="fa fa-bars"></i>
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html">Home</a>
           </li>
           <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="snowbirdhaven.html">Snowbird Haven Website</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">Virtual Reality UX/UI</a>
-              <a class="dropdown-item nav-item" href="jaski.html">JasKi Productions UX/UI</a>
-              <a class="dropdown-item nav-item text-primary" href="luxe.html">Luxe Magazine Ottawa</a>
-              <a class="dropdown-item nav-item" href="cmg-branding-guide.html">CMG Branding Guide</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Comic Book Illustration</a>
-              <a class="dropdown-item nav-item" href="graphic-design.html">Harper Graphic Design</a>
-              <a class="dropdown-item nav-item" href="motion-graphics.html">Archer Motion Graphics</a>
+              <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="luxe.html">Luxe</a>
+              <a class="dropdown-item nav-item" href="visual-projects.html">Visual Projects</a>
             </div>
           </div>
-
-          <!--<li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#portfolio">Projects</a>
-          </li>-->
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="play.html">Play</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#connect">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="about.html">About</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Banner -->
-  <section class="text-center pt-5 mt-5">
-    <div class="row w-75 mx-auto pb-5">
 
-      <div class="col d-inline">
-        <img class="img-fluid" src="img/projects/luxe/luxe-cover-fall.png" alt="">
-        <div>
-          <h3 class="pb-0 mb-0">Luxe Magazine Ottawa</h3>
-          <h5 class="pb-0 text-uppercase">Fall 2019</h5>
-          <p class="text-uppercase" style="font-size: 14px;">Magazine Design</p>
-          <a class="btn btn-primary btn-md rounded-pill mb-1" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">Look Inside</a>
+  <section class="mx-auto pt-5 bg-secondary">
+    <div class="col-lg-6 mx-auto w-75 pt-5">
+      <div class="row text-center">
+        <div class="text-center mx-auto">
+          <img class="img-fluid pt-4" src="img/projects/luxe/luxe.png" alt="">
         </div>
       </div>
 
-      <div class="col d-inline">
-        <img class="img-fluid" src="img/projects/luxe/luxe-cover.png" alt="">
-        <div>
-          <h3 class="pb-0 mb-0">Luxe Magazine Ottawa</h3>
-          <h5 class="pb-0 text-uppercase">Spring/Summer 2019</h5>
-          <p class="text-uppercase" style="font-size: 14px;">Magazine Design</p>
-          <a class="btn btn-primary btn-md rounded-pill mb-1" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">Look Inside</a>
-        </div>
+      <div class="text-center pb-2">
+        <h1 class="pb-0 mb-0">Luxe</h1>
+        <p class="text-uppercase" style="font-size: 14px;">UX Design</p>
       </div>
     </div>
   </section>
 
+  <section class="w-75 mx-auto pb-5">
 
-<section class="text-center bg-secondary pt-5 mt-5 pb-5 mt-0">
-  <div class="mx-auto text-center pl-5 pr-5">
-    <p>LUXE Ottawa is a publication that offers information on the very best Ottawa has to offer.<br>These 148 and 132 page projects included front-to-back design of cover, layout, editorial, advertorial and advertisement design.</p>
-  </div>
+    <div class="col-lg-8 ml-auto mr-auto pt-4">
 
-</section>
+    <p>Snowbird Haven was in dire need of a solution to grow their business. Working with Snowbird Haven involved re-branding and updating their outdated website. This included the need for search engine optimization and an easily-accessible way for the target
+      audience to view available accomodations.</p>
+
+    <p>Snowbird Haven is a quiet and beautiful resort that offers cottage and RV site rentals in White Lake, ON. Their primary focus is to accomodate citizens with long and short-term vacation rentals.</p>
+
+    <div>
+      <h3 class="pb-0 mb-0">Objectives</h3>
+      <p>Working with Snowbird Haven involved re-branding and building a stunning promotional business website. The new website was built to be easily-accessible and allowed clients to find information on long and short-term rentals in White Lake, ON.</p>
+
+      <h3 class="pb-0 mb-0">Goals</h3>
+      <ul>
+        <li>Invest most of the time re-branding and designing the new website.</li>
+        <li>Examining and collecting data on competitors.</li>
+        <li>Structure information architecture to facilitate the users browsing behaviour.</li>
+        <li>Create a mobile-first, responsive site that works effortlessly on all desktop and mobile devices.</li>
+        <li>Include an easy way to view rental availability.</li>
+        <li>Include metadata tactics for improved search engine optimization.</li>
+        <li>Provide user-focused content, structure, and navigation.</li>
+        <li>Ensure ease of use for all site editors independent of their level of technology understanding.</li>
+      </ul>
+
+    </div>
+    <div class="text-center"><a class="btn btn-primary btn-md rounded-pill mb-2" href="http://www.snowbirdhaven.ca" target="_blank">Visit the New Site</a></div>
+
+    <!--<div class="row text-center">
+      <div class="col-md-6 col-lg-6 col-xl-6 text-center mx-auto">
+        <img class="img-fluid mb-2" src="img/projects/sshr/sshr-imac-1.png" alt="">
+        <p class="mb-2">Old Site</p>
+      </div>-->
+
+    <!--<div class="d-block mx-auto pb-5 pt-5 text-center">
+      <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/wp.svg" alt="adobe indesign logo">
+      <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ps.svg" alt="adobe photoshop logo">
+      <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ai.svg" alt="adobe illustrator logo">
+    </div>-->
+
+    <!--<div class="text-center pb-5">
+      <a class="btn btn-primary btn-md rounded-pill mb-1" href="index.html#portfolio">Return to Projects</a>
+    </div>-->
+
+    </div>
+  </section>
 
 
 
 
 
   <!-- Footer -->
-  <footer class="footer text-center" id="footer">
+  <footer id="connect" class="footer center text-center pb-3" id="footer">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-          <h5 class="text-uppercase mb-1 text-primary">Location</h5>
-          <p class="mb-3">Ottawa, ON</p>
-        </div>
-        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-          <h5 class="text-uppercase mb-1 text-primary">Connect</h5>
+      <h5 class="font-weight-bold mb-3">Let's connect</h5>
+        <p>Get in touch for opportunities or just to say hi! 👋</p>
           <ul class="list-inline mb-3">
             <li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
-                  <i class="fab fa-instagram"></i>
-                  </a>
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
             </li>
             <li class="list-inline-item">
               <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                    <i class="fas fa-envelope"></i>
-                  </a>
+                  <i class="fas fa-envelope"></i>
+                </a>
             </li>
           </ul>
-        </div>
-
-        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-          <h5 class="text-uppercase mb-1 text-primary">Navigate</h5>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item d-block">
-              <a href="index.html">Home</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="index.html#about">About</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="index.html#portfolio">Projects</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="photography.html">Photography</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="index.html#connect">Connect</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-          <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item d-block">
-              <a href="snowbirdhaven.html">Snowbird Haven Website</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="masterpiece-vr.html">Virtual Reality UX/UI</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="jaski.html">Jaski Productions UX/UI</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="luxe.html" class="text-primary">Luxe Magazine Ottawa</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="cmg-branding-guide.html">CMG Branding Guide</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="illustration.html">Comic Book Illustration</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="graphic-design.html">Harper Graphic Design</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="motion-graphics.html">Archer Motion Graphics</a>
-            </li>
-          </ul>
-        </div>
-
-      </div>
   </footer>
 
-  <div class="copyright py-4 text-center text-white">
-    <div class="container">
-      <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
-      <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-    </div>
+  <div class="copyright py-4 text-center" <div class="container pt-1">
+    <small>©2022 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+  </div>
+  </div>
   </div>
 
-  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
-  </div>
+
 
 
   <!-- Bootstrap core JavaScript -->
