indy photo update 2
indy photo update 2

--- a/illustration.html
+++ b/illustration.html
@@ -121,7 +121,7 @@
 
             <p>I train and compete with my ex-race horse, Indy.</p>
             <a class="d-block mx-auto" href="https://www.instagram.com/hannahthequestrian/" target="_blank">
-            <img class="img-fluid project" src="img/indy.jpg">
+            <img class="img-fluid project" src="img/indy-xc.jpg">
           </a>
 </div>
             </section>
